syntax = "proto3";

package lampyris.crypto.protocol.app;

/*---------- Ticker 数据 ----------*/
// 请求-登录
message ReqLogin {
    string deviceMAC = 1; // 设备MAC地址用于验证
    string deviceName = 2; // 设备名称
}

// 响应-登录
message ResLogin {
    string errorMessage = 1; // 登录报错信息，如果为空说明登陆成功 
}

// 请求-客户端发送心跳包
message ReqHeartBeat {
    int64 clientTime = 1; // 客户端时间
    bool isForeground = 2; // 客户端是否置于前台
}

// 响应-服务端发送心跳包
message ResHeartBeat {
    int64 serverTime = 1; // 服务端时间
}

// 请求-客户端symbol点击流
message ReqUploadAppBehaviour {
    string symbol = 1;  // 交易对
    int64 timestamp = 2; // 点击流时间戳
    bool isEnter = 3; // 如果为true，说明客户端打开了symbol的具体行情界面，否则为退出
}
/*---------------------------------*/ 
